# experiments

./: README.md
2022/credit-card-validator/: CMakeLists.txt  README.md
2022/credit-card-validator/src/: credit_card_validator.cpp  credit_card_validator.h  credit_card_validator_test.cpp  main.cpp
2023/memory-mania/: .gitignore  README.md  export_presets.cfg  project.godot
2024/blazor-todo-list/: README.md
2024/build-web-app-s3-lambda-api-gateway-dynamodb/: README.md  package-lock.json  package.json
2024/ci-cd-using-codepipeline-codebuild-and-codedeploy/: README.md  cdk.json  package-lock.json  package.json
2024/h-plus-sport/: HPlusSport.API.csproj  HPlusSport.API.http  Program.cs  README.md
2024/k-inverse-pairs/: Cargo.toml  README.md
2024/mongodb/: .env.example  README.md  app.js  db.js  docker-compose.yml  package-lock.json  package.json
2024/turn-based-game-dynamodb-amazon-sns/: .gitignore  README.md
2024/weather-forecast/: README.md  WeatherForecast.cs  weather-forecast.csproj  weather-forecast.http
2025/aws-simple-architecture/: .gitignore  README.md  create-key-pair.sh
2025/cloudflare-websocket-counter/: README.md  package-lock.json  package.json  worker-configuration.d.ts  wrangler.jsonc
2025/mulesoft-salesforce-integration/: AccountAPI.postman_collection.json  AccountApi.cls  README.md
2025/prometheus/: README.md  docker-compose.yml  prometheus-data-generator-rose.yml  prometheus-data-generator-sunflower.yml  prometheus-data-generator-tulip.yml  prometheus.yml
2025/spech-to-text/: README.md  live_transcription.py  pyproject.toml  (+1 more)
(+314 files in other folders)
